2015-03-31 Pierre Wieser <pwieser@trychlos.org>

	* misc/convert/ebp_accounts.pl,
	* misc/convert/ebp_entries.pl: accept a field separator argument.

	* misc/convert/ebp_accounts.pl:
	- import settleable indicator from EBP accounts (todo #779).

	Fix segfault when trying to import again a BAT file (todo #781).

	* src/api/ofa-iimportable.h,
	* src/core/ofa-iimportable.c,
	* src/api/ofo-bat.h,
	* src/core/ofo-bat.c,
	* src/import-bourso/ofa-importer.c,
	* src/import-bourso-pdf/ofa-importer.c,
	* src/import-lcl/ofa-importer.c,
	* src/import-lcl-pdf/ofa-importer.c,
	* src/ui/ofa-bat-utils.c:
	- use a pointer to an ofxCounter instead of to a pointer.

	* src/core/ofo-entry.c: remove double order clause.

2015-03-30 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-pdf-books.c: doesn't try to print while computing the
	count of pages (todo #782).

	* src/import-bourso-pdf/ofa-importer.c,
	* src/import-lcl-pdf/ofa-importer.c: make sure we do not import empty lines.

	* src/api/ofs-bat.h,
	* src/core/ofs-bat.c: new ofs_bat_detail_free() function.

	* src/core/ofo-entry.c: fix query build.

	Have table conversion on import scripts (todo #771).

	* misc/convert/ebp_accounts.pl,
	* misc/convert/ebp_entries.pl: have account and ledger convertors.

	Move ACCOUNT_ALLOW_xxx feature to ofoAccount class.

	* src/api/ofo-account.h,
	* src/core/ofo-account.c: new ofo_account_is_allowed() method.

	* src/ui/ofa-account-select.c,
	* src/ui/ofa-account-select.h,
	* src/ui/ofa-closing-parms-bin.c,
	* src/ui/ofa-guided-input-bin.c,
	* src/ui/ofa-ope-template-properties.c,
	* src/ui/ofa-pdf-books.c,
	* src/ui/ofa-pdf-entries-balance.c,
	* src/ui/ofa-pdf-reconcil.c,
	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-settlement.c,
	* src/ui/ofa-view-entries.c: updated accordingly.

	* src/ui/ofa-ledger-close.c: review dialog validation (todo #772).

2015-03-29 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-settlement.c:
	- settled entries have a light gray background (todo #773).
