@@ -64,6 +64,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
+                        <property name="width_chars">12</property>
                       </object>
                       <packing>
                         <property name="left_attach">2</property>
@@ -121,7 +122,7 @@
               </object>
             </child>
             <child type="label">
-              <object class="GtkLabel" id="label1">
+              <object class="GtkLabel" id="frame-label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">&lt;b&gt; Effect dates filter &lt;/b&gt;</property>
